syntax = "proto3";

package school;

option go_package = "./pkg/pb";

service SchoolService {
  rpc CreateSchool(SchoolRequest) returns (SchoolCreateResponse) {}
  rpc CreateClass(ClassRequest) returns (SchoolCreateResponse) {}
  rpc GetClass(ClassID) returns (ClassResponse) {}
  rpc CreateStudent(StudentRequest) returns (SchoolCreateResponse){}
}

message SchoolRequest {
  string name = 1;
}

message SchoolCreateResponse {
  int64 status = 1;
  string error = 2;
}

message ClassRequest {
  string name = 1;
  int64 headTeacher = 2;
  int64 schoolId = 3;
}

message Class{
  int64 id = 1;
  string name = 2;
  int64 headTeacher = 3;
  int64 schoolId = 4;
}

message ClassResponse {
  int64 status = 1;
  string error = 2;
  Class data = 3;
}

message StudentRequest{
  int64 userID = 1;
  int64 classID = 2;
}

message ClassID { int64 id = 1; }